samples/_failures_safe/1761071963_bfba66_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fbaf6298.c: In function ‘main’:
./samples/SAFE/__tmp_fbaf6298.c:140:5: error: ‘init’ undeclared (first use in this function); did you mean ‘int’?
  140 |     init
      |     ^~~~
      |     int
./samples/SAFE/__tmp_fbaf6298.c:140:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_fbaf6298.c:140:9: error: expected ‘;’ at end of input
  140 |     init
      |         ^
      |         ;
./samples/SAFE/__tmp_fbaf6298.c:140:5: error: expected declaration or statement at end of input
  140 |     init
      |     ^~~~
